[package]
name = "fragment-native"
version = "0.1.0"
authors = ["Paul Miller <paul@pauljmiller.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = {path = "../druid/druid" }
ignore = "0.4.12"
walkdir = "2.3.1"
grep = "0.2.5"
open = "1.4.0"
argh = "0.1.3" 
