[package]
name = "fragment-native"
version = "0.1.0"
authors = ["Paul Miller <paul@pauljmiller.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = "0.5"
walkdir = "2.3.1"
grep = "0.2.5"
open = "1.4.0"
argh = "0.1.3" 
chrono = "0.4.11"
notify = "5.0.0-pre.2"
crossbeam-channel = "0.4.2"