[package]
authors = ["Paul Miller <paul@pauljmiller.com>"]
edition = "2018"
name = "fragment-native"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.3"
chrono = "0.4.11"
crossbeam-channel = "0.4.2"
druid = "0.6"
grep = "0.2.5"
notify = "5.0.0-pre.2"
open = "1.4.0"
walkdir = "2.3.1"
